--- a/.github/workflows/main_scoribackend.yml
+++ b/.github/workflows/main_scoribackend.yml
@@ -1,75 +1,30 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy PHP app to Azure Web App - ScoriBackend
+name: Deploy to Azure App Service
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
+    - name: Set up Azure CLI
+      uses: azure/cli@v1
+      with:
+        azcliversion: latest
 
-      - name: Check if composer.json exists
-        id: check_files
-        uses: andstor/file-existence-action@v1
-        with:
-          files: 'composer.json'
+    - name: Login to Azure
+      run: az login --service-principal -u ${{ secrets.AZUREAPPSERVICE_CLIENTID }} -p ${{ secrets.AZUREAPPSERVICE_CLIENTSECRET }} --tenant ${{ secrets.AZUREAPPSERVICE_TENANTID }}
 
-      - name: Run composer install if composer.json exists
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: composer validate --no-check-publish && composer install --prefer-dist --no-progress
+    - name: Set subscription
+      run: az account set --subscription ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+    - name: Deploy to Azure Web App
+      run: |
+        az webapp deployment source config --name <your-web-app-name> --resource-group <your-resource-group> --branch main --repo <repository-url> --manual-integration
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: php-app
-          path: release.zip
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: php-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F5E541C11B6F4BAAA813DB86CC4B03AE }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_43160280F5E74CD2A13E69E6575F4522 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_7626C543E7D04BCFB49BC44A5FADCB07 }}
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'ScoriBackend'
-          slot-name: 'Production'
-          package: .
-          
